--- a/2.html
+++ b/2.html
@@ -107,7 +107,7 @@ body {
 
 <div class="box1">
         <h3>초장</h3>
-  <img src="2P-1.png">
+  <img src="2p-1.png">
   <table class="firstline">
 <tr>
 <td><strong style="color:#EAC232">사자가 몸을 푸는 과정</strong><br>
@@ -123,7 +123,7 @@ body {
 </table>
 </div>
 
-        <div class="box2"><h3>중장</h3>  <img src="2P-2.png">
+        <div class="box2"><h3>중장</h3>  <img src="2p-2.png">
           <table class="firstline2">
         <tr>
         <td><strong style="color:#EAC232">사자가 묘기를 부린다</strong><br>
@@ -148,7 +148,7 @@ body {
         </table>
   </div>
 
-          <div class="box3"> <h3>말장</h3>   <img src="2P-3.png">
+          <div class="box3"> <h3>말장</h3>   <img src="2p-3.png">
           <table class="firstline3">
         <tr>
         <td><strong style="color:#EAC232">사자가 소생한다</strong><br>
