--- a/4.html
+++ b/4.html
@@ -83,8 +83,7 @@ li:hover{
 4.한지와 밀가루 풀을 꼼꼼히 붙인다.<br><br>
 5.작업을 계속 반복한다.<br><br>
 6.눈코입을 만든다.<br><br>
-7.완성된 탈에 수채화 물감을 바른다.<br><br>
-8.완성
+7.완성된 탈에 수채화 물감을 바르고 완성.<br><br>
 <br><br>
 </p>
 <hr style="width:60%;margin-left:150px;">
